# Ecommerce-label-sorter

./: .gitignore  .sync-conflict-20251219-112348-UX2O7G6.gitignore  README.md  core.py  manual.py  project.py  pyproject.toml  regex_patterns.py  requirements.txt  setup.py  sorting_algorithms.py  test_project.py
.obsidian/: workspace-mobile.json
.stfolder/: syncthing-folder-ed092d.txt
docs/: Amazon.md  Label_Sorter.md  Label_Sorter.sync-conflict-20251219-112348-UX2O7G6.md  Vocabulary.md  doc.sync-conflict-20251219-112348-UX2O7G6.md
ecom_label_sorter.egg-info/: SOURCES.txt
label_sorter/: core.py  core.sync-conflict-20251219-112346-UX2O7G6.py  platform_detector.py
label_sorter.egg-info/: PKG-INFO
sorting_alrogithms/: amazon.py  shopify.py  sort.py  sorting_algorithms.py
tests/: credentials.py  filepaths.py  test_amazon.py  test_core.py  test_packaging.py  test_platforms.py  test_project.py
