[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Ecommerce_label_sorter_Harry19967"
version = "0.1"
authors = [
  { name="Harilal Sunil", email="harilalsunil2@gmail.com" },
]
description = "Library to sort Amazon and Shopify shipping labels"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/harilal766/Ecommerce-label-sorter"
Issues = "https://github.com/harilal766/Ecommerce-label-sorter/issues"